# revisiting-spatial-temporal-layouts

./: .flake8  .gitignore  README.md  pyproject.toml
src/: create_action_genome_datasets.py  create_datasets.py  create_something_datasets.py  dump_perbox_features.py  dump_perframe_features.py  inference.py  inference_stlt.py  pil2hdf5.py  train.py  train_stlt.py  video2pil.py
src/layout_models/: datasets.py  modelling.py
src/modelling/: configs.py  datasets.py  model_configs.py  models.py  resnets3d.py
src/utils/: constants.py  data_utils.py  evaluation.py  model_utils.py  parser.py  train_inference_utils.py  train_utils.py
