[tool.poetry]
name = "revisiting-spatial-temporal-layouts"
version = "0.1.0"
description = ""
authors = ["Gorjan Radevski <gorjanradevski@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
torch = "^1.10.1"
torchvision = "^0.11.2"
opencv-python = "^4.5.4"
jupyter = "^1.0.0"
tqdm = "^4.62.3"
natsort = "^8.0.2"
h5py = "^3.6.0"
accelerate = "^0.5.1"
ffmpeg-python = "^0.2.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
